2007-12-04	Joel Sherrill <joel.sherrill@OARcorp.com>

	* startup/bspstart.c: Move interrupt_stack_size field from CPU Table to
	Configuration Table. Eliminate CPU Table from all ports. Delete
	references to CPU Table in all forms.

2007-12-04	Joel Sherrill <joel.sherrill@oarcorp.com>

	* clock/clock.c: Fix typo.

2007-12-03	Joel Sherrill <joel.sherrill@oarcorp.com>

	* irq/irq.c: Spacing.

2007-12-03	Joel Sherrill <joel.sherrill@OARcorp.com>

	* startup/bspstart.c: Moved most of the remaining CPU Table fields to
	the Configuration Table. This included pretasking_hook,
	predriver_hook, postdriver_hook, idle_task, do_zero_of_workspace,
	extra_mpci_receive_server_stack, stack_allocate_hook, and
	stack_free_hook. As a side-effect of this effort some multiprocessing
	code was made conditional and some style clean up occurred.

2007-11-30	Till Straumann <strauman@slac.stanford.edu>

	* startup/bspstart: removed _Cpu_table.exceptions_in_RAM.

2007-11-30	Till Straumann <strauman@slac.stanford.edu>

	* irq/irq.h, irq/irq_init.c: Removed the definition
	of ASM_IRQ_VECTOR_BASE; this symbol was only use to
	initialize the irqBase member of the rtems_irq_global_settings
	struct. However, irqBase is an rtems_irq_symbolic_name,
	so using BSP_LOWEST_OFFSET is more appropriate.

2007-11-28	Joel Sherrill <joel.sherrill@OARcorp.com>

	* clock/clock.c, startup/bspstart.c: Eliminate PowerPC specific
	elements from the CPU Table. They have been replaced with variables
	named bsp_XXX as needed.

2007-10-31	Joel Sherrill <joel.sherrill@oarcorp.com>

	* include/mpc5200.h: Fix typo.

2007-10-30	Joel Sherrill <joel.sherrill@oarcorp.com>

	* include/mpc5200.h: Fix constants off by one nibble.

2007-10-30	Joel Sherrill <joel.sherrill@oarcorp.com>

	* include/mpc5200.h: Added some simple interrupt GPIO constants.

2007-10-26	Joel Sherrill <joel.sherrill@oarcorp.com>

	* irq/irq.h: Fixed typos.

2007-09-21	Joel Sherrill <joel.sherrill@OARcorp.com>
